--- a/.gitignore
+++ b/.gitignore
@@ -5,33 +5,33 @@
 ### Angular ###
 ## Angular ##
 # compiled output
-dist/
-tmp/
-app/**/*.js
-app/**/*.js.map
+Angular/dist/
+Angular/tmp/
+Angular/app/**/*.js
+Angular/app/**/*.js.map
 
 # dependencies
-node_modules/
-bower_components/
+Angular/node_modules/
+Angular/bower_components/
 
 # IDEs and editors
 .idea/
 
 # misc
-.sass-cache/
-connect.lock/
-coverage/
-libpeerconnection.log/
-npm-debug.log
-testem.log
-typings/
+Angular/.sass-cache/
+Angular/connect.lock/
+Angular/coverage/
+Angular/libpeerconnection.log/
+Angular/npm-debug.log
+Angular/testem.log
+Angular/typings/
 
 # e2e
-e2e/*.js
-e2e/*.map
+Angular/e2e/*.js
+Angular/e2e/*.map
 
 # System Files
-.DS_Store/
+Angular/.DS_Store/
 
 ### Java ###
 # Compiled class file
