--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,angular
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,angular
+sts/
 
 ### Angular ###
 ## Angular ##
